--- a/slack_projet/src/app/app.component.html
+++ b/slack_projet/src/app/app.component.html
@@ -1,1 +1,13 @@
-<router-outlet></router-outlet>
+<main>
+  <div class="shadow position-fixed"></div>
+  <aside>
+    <div class="scroller">
+      <app-nav></app-nav>
+    </div>
+  </aside>
+  <div class="page">
+    <div class="contents">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</main>
