--- a/slack_projet/src/app/app.component.html
+++ b/slack_projet/src/app/app.component.html
@@ -1,1 +1,14 @@
+<header class="fixed-top">
+  <nav class="navbar">
+    <a class="navbar-brand" href="#">
+      <img
+        src="https://pentagram-production.imgix.net/618d5092-a542-4dae-bd27-a3afb4bcc12d/mb_slack_01.jpg?crop=edges&fit=crop&h=630&rect=0%2C74%2C3000%2C1872&w=1200"
+        width="200px"
+        height="100px"
+        class="d-inline-block align-top"
+        alt="slack_icon"
+      />
+    </a>
+  </nav>
+</header>
 <router-outlet></router-outlet>
