--- a/slack_projet/src/app/canaux/pages/canal-discussion/canal-discussion.component.html
+++ b/slack_projet/src/app/canaux/pages/canal-discussion/canal-discussion.component.html
@@ -1,12 +1,12 @@
 
 
 
-<ul class="list-group" *ngFor="let obj of tab">
+<ul class="list-group" *ngFor="let message of canal.messages">
     <li class="list-group-item">
-
+        {{ message.text }}
     </li>
 </ul>
 
   <br>
 
-  <!-- <app-form-message></app-form-message> -->
+  <!-- <app-form></app-form> -->
