--- a/slack_projet/src/app/canaux/pages/accueil/accueil.component.html
+++ b/slack_projet/src/app/canaux/pages/accueil/accueil.component.html
@@ -1,4 +1,6 @@
-<div class="container d-flex flex-direction-column justify-content-center">
+<div
+  class="container d-flex flex-direction-column flex-wrap justify-content-center"
+>
   <img
     src="https://heise.cloudimg.io/width/610/q85.png-lossy-85.webp-lossy-85.foil1/_www-heise-de_/imgs/18/2/5/4/6/7/8/7/Bildschirmfoto_2018-05-02_um_09-c639825898d0b3a5.png"
     alt="slack_logo"
