pour pouvoir pull

--- a/slack_projet/src/app/canaux/pages/accueil/accueil.component.html
+++ b/slack_projet/src/app/canaux/pages/accueil/accueil.component.html
@@ -7,8 +7,8 @@
     class="d-flex justify-content-center no-border"
   />
   <div
-    id="carouselExampleControls"
-    class="carousel slide"
+    id="carouselExampleFade"
+    class="carousel slide carousel-fade"
     data-bs-ride="carousel"
   >
     <div class="carousel-inner">
@@ -16,20 +16,28 @@
         <img
           src="https://kinsta.com/fr/wp-content/uploads/sites/4/2019/11/comment-utiliser-slack.jpg"
           class="d-block w-100"
-          alt="..."
+          alt="slide1"
         />
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="..." />
+        <img
+          src="https://d34u8crftukxnk.cloudfront.net/slackpress/prod/sites/6/2022-06-slack-huddles-hero.jpg?d=500x500&f=inside"
+          class="d-block w-100"
+          alt="slide2"
+        />
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="..." />
+        <img
+          src="https://geekbot.com/blog/wp-content/uploads/2020/08/How-to-Use-Slack-for-Remote-Teams.jpg"
+          class="d-block w-100"
+          alt="slide3"
+        />
       </div>
     </div>
     <button
       class="carousel-control-prev"
       type="button"
-      data-bs-target="#carouselExampleControls"
+      data-bs-target="#carouselExampleFade"
       data-bs-slide="prev"
     >
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -38,7 +46,7 @@
     <button
       class="carousel-control-next"
       type="button"
-      data-bs-target="#carouselExampleControls"
+      data-bs-target="#carouselExampleFade"
       data-bs-slide="next"
     >
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
