--- a/slack_projet/src/app/canaux/components/form/form.component.html
+++ b/slack_projet/src/app/canaux/components/form/form.component.html
@@ -1,1 +1,14 @@
-<p>form works!</p>
+<div class="container">
+  <form  [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div class="form-input">
+      <input
+        type="text"
+        class="form-control"
+        id="canalName"
+        placeholder="nom du canal"
+        formControlName="canalName"
+      />
+    </div>
+    <button type="submit" class="btn btn-warning">Ajouter un canal</button>
+  </form>
+</div>
