--- a/slack_projet/src/app/app.component.scss
+++ b/slack_projet/src/app/app.component.scss
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  // box-sizing: border-box;
 }
 
 .navbar {
@@ -12,7 +12,7 @@
 main {
   background: #ebedf2;
   min-height: calc(100vh - 65px);
-  padding-top: 65px;
+  // padding-top: 65px;
 }
 
 aside {
@@ -20,7 +20,7 @@ aside {
   width: 250px;
   min-height: 100vh;
   position: fixed;
-  z-index: 1000;
+  // z-index: 1000;
 
   .scroller {
     overflow-y: auto;
