--- a/slack_projet/src/app/core/components/nav/nav.component.html
+++ b/slack_projet/src/app/core/components/nav/nav.component.html
@@ -1,4 +1,6 @@
 <app-form [canal]="newCanal" (submitted)="onAdd($event)"></app-form>
-<li *ngFor="let item of tab">
-  {{ item.canalName }}
+<li  *ngFor="let item of tab">
+  <button class="btn" (click)="goToCanal(item)">
+    {{ item.canalName }}
+  </button>
 </li>
