le redirect marche bien

--- a/slack_projet/src/app/canaux/pages/canal-discussion/canal-discussion.component.html
+++ b/slack_projet/src/app/canaux/pages/canal-discussion/canal-discussion.component.html
@@ -1,7 +1,7 @@
 
 
 
-<ul class="list-group" *ngFor="let message of canal.messages">
+<ul class="list-group" *ngFor="let message of canal?.messages">
     <li class="list-group-item">
         {{ message.text }}
     </li>
